--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -34,11 +34,16 @@
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
 	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {
-	                 sessionStorage.setItem("user",JSON.stringify(data.user));
-	                 window.location.href="./index.html"; 
+	            	 if(data.result==1){
+	            		 sessionStorage.setItem("user",JSON.stringify(data.user));
+		                 window.location.href="./index.html"; 
+	            	 }else{
+	            		 alert("用户名或密码错误");
+	            	 }
+	                 
 	             },
 	             error: function (er) {          //失败，回调函数
-	                 alert("用户名或密码错误")
+	                 alert("用户名或密码错误");
 	                 //sessionStorage.setItem("user",user);
 	                 //window.location.href="./index.html"; 
 	                 //alert(er);
