--- a/src/main/webapp/clientOrderList.html
+++ b/src/main/webapp/clientOrderList.html
@@ -49,7 +49,7 @@ function findMoreOrderByStatus(){
 	pages+=1;//查找第几页
 	
 	var data={
-			"status":orderStatus,
+			"status":""+orderStatus,
 			"user_id":0,
 			"currentPage":pages
 		};
@@ -63,9 +63,10 @@ function findMoreOrderByStatus(){
           success: function (data) {      //成功，回调函数
         	  
           	data = data.list1;
-          	
-          	for(var i=0;i<data.length;i++){
-      		    $("#order").append("<tr><td>"+data[i].id+"</td><td>"+data[i].user_company+"</td><td>"+data[i].delivery_time+"</td><td>"+orderStatusName[data[i].order_status]+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"','"+data[i].order_real_price+"','"+data[i].order_low_price+"','"+data[i].order_high_price+"')\">查看</a></td></tr>");
+          	if(data){
+          		for(var i=0;i<data.length;i++){
+          		    $("#order").append("<tr><td>"+data[i].id+"</td><td>"+data[i].user_company+"</td><td>"+data[i].delivery_time+"</td><td>"+orderStatusName[data[i].order_status]+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"','"+data[i].order_real_price+"','"+data[i].order_low_price+"','"+data[i].order_high_price+"')\">查看</a></td></tr>");
+              	}
           	}
           },
           error: function (er) {          //失败，回调函数
