--- a/src/main/webapp/editGoods.html
+++ b/src/main/webapp/editGoods.html
@@ -28,18 +28,20 @@
 	             dataType: 'json',              //数据返回类型，可以是xml、json等
 	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {      //成功，回调函数    画页面
-	            	data = {"goods" : {"goods_name":"大白菜","goods_low_price":12.6,"goods_high_price":15.8,"goods_type":1,"goods_detai":"一颗大白菜","goods_status":1,"goods_Recommended":0,
-	            		"goods_create_time":"2018-6-6","goods_img":"www.baidu.com"}};
+	            	//data = {"goods" : {"goods_name":"大白菜","goods_low_price":12.6,"goods_high_price":15.8,"goods_type":1,"goods_detai":"一颗大白菜","goods_status":1,"goods_Recommended":0,
+	            	//	"goods_create_time":"2018-6-6","goods_img":"www.baidu.com"}};
                  	data = data.goods;
-                 	$('#img').val(data.goods_img);//图片
-                 	$('#goodsName').val(data.goods_name);//品名
-					$('#lowPrice').val(data.goods_low_price);//单价低价
-					$('#highPrice').val(data.goods_high_price);//单价高价
-					$('#base').val(data.base);//基地id
-					$('#goodsDetailText').val(data.goods_detai);//产品详情
-					$('#inspectionReportText').val(data.inspectionReportText);//质检详情
-					$('#goodsSourceText').val(data.goodsSourceText);//产品溯源
-					$('#baseDetailText').val(data.baseDetailText);//基地详情
+                 	if(data){
+                 		$('#img').val(data.goods_img);//图片
+                     	$('#goodsName').val(data.goods_name);//品名
+    					$('#lowPrice').val(data.goods_low_price);//单价低价
+    					$('#highPrice').val(data.goods_high_price);//单价高价
+    					$('#base').val(data.base);//基地id
+    					$('#goodsDetailText').val(data.goods_detai);//产品详情
+    					$('#inspectionReportText').val(data.inspectionReportText);//质检详情
+    					$('#goodsSourceText').val(data.goodsSourceText);//产品溯源
+    					$('#baseDetailText').val(data.baseDetailText);//基地详情
+                 	}
 	             },
 	             error: function (er) {          //失败，回调函数
 	                 alert(er);
