--- a/src/main/webapp/editGoodsType.html
+++ b/src/main/webapp/editGoodsType.html
@@ -27,9 +27,11 @@ var message;//请求参数
 	             success: function (data) {      //成功，回调函数    画页面
 	            	 data=data.list;
 	                 //	$("#goodsType").remove();//移除
-	                  for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                         $("#goods").append("<tr><td>"+data[i].id+"</td><td>"+data[i].goods_type_name+"</td><td>"+data[i].create_time+"</td><td><input type='button' onclick='deleteGoodsType("+data[i].id+")' value='删除'/><input type='button' onclick='editGoodsType("+data[i].id+")' value='修改'/></td></tr>");
-                     }
+	                 if(data){
+	                	 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
+	                         $("#goods").append("<tr><td>"+data[i].id+"</td><td>"+data[i].goods_type_name+"</td><td>"+data[i].create_time+"</td><td><input type='button' onclick='deleteGoodsType("+data[i].id+")' value='删除'/><input type='button' onclick='editGoodsType("+data[i].id+")' value='修改'/></td></tr>");
+	                     } 
+	                 }
 	             },
 	             error: function (er) {          //失败，回调函数
 	                 alert(er);
@@ -45,7 +47,7 @@ var message;//请求参数
 	    {
 	    	message={
 	    			"goods_type":{  "goods_type_name":str,
-                "id":goodsTypeId}
+                	"id":goodsTypeId}
 	    			//数据
 	               
 	             };
