--- a/src/main/webapp/editUserInfo.html
+++ b/src/main/webapp/editUserInfo.html
@@ -22,10 +22,12 @@ var user = JSON.parse(obj);
 			//初始化方法
 		<!-- 用户对象 -->
 		//$("#img").html(user.img);	//给用户资料赋值
-		$("#name").val(user.user_name);
-		$("#birthday").val(user.user_birthday);
-		$("#userCompany").val(user.user_company);
-		$("#userPhone").val(user.user_phone);
+		if(user){
+			$("#name").val(user.user_name);
+			$("#birthday").val(user.user_birthday);
+			$("#userCompany").val(user.user_company);
+			$("#userPhone").val(user.user_phone);
+		}
 	});
 	function edit(){
 		var user = {
