--- a/src/main/webapp/pendingQuateOrder.html
+++ b/src/main/webapp/pendingQuateOrder.html
@@ -36,8 +36,10 @@ function findMoreOrderByStatus(){
 	             contentType:'application/json;charset=UTF-8',
 	             success: function (data) {      //成功，回调函数
 	             	data = data.list1;
-	             	for(var i=0;i<data.length;i++){
-	                	$("#order").append("<tr><td>"+data[i].id+"</td><td>"+data[i].address+"</td><td>"+data[i].delivery_time+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"')\">去报价</a></td></tr>");
+	             	if(data){
+	             		for(var i=0;i<data.length;i++){
+		                	$("#order").append("<tr><td>"+data[i].id+"</td><td>"+data[i].address+"</td><td>"+data[i].delivery_time+"</td><td><a href='javascript:void(0)' onclick=\"getOrderDetail('"+data[i].id+"')\">去报价</a></td></tr>");
+		             	}
 	             	}
 	             },
 	             error: function (er) {          //失败，回调函数
