--- a/src/main/webapp/userOrderDetail.html
+++ b/src/main/webapp/userOrderDetail.html
@@ -42,28 +42,24 @@
              success: function (data) {      //成功，回调函数
                  //alert(data.result);
                  data = data.list1;
-                 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                        $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].goods_real_price+"</td></tr>");
-                    }
-                    $("#orderStatus").text(orderStatusName[orderStatus]);//更改订单状态
-                    if(orderStatus!=1){
-                    	$("#account").text("￥"+orderPrice+"元");//更改订单金额
-                    }else{
-                    	$("#account").text("￥"+lowPrice+"~"+highPrice+"元");//更改订单金额
-                    }
-                    if(orderStatus==2){//确认订单详情页面
-                    	//$('#confirm').attr("display","block");
-                    	document.getElementById("confirm").style.display ="block";
-                    }
-                    if(orderStatus==4){//待收货订单详情页面。可以提交售后信息
-                    	document.getElementById("afterSales").style.display ="block";
-                    }
-                   // if(orderStatus==5){
-                   // 	document.getElementById("afterSales").style.display ="block";
-                   // 	document.getElementById("upload").style.display ="none";
-                   // 	findAfterSaleInfo(data.id);//售后信息查询
-                   // }
-                    
+                 if(data){
+                	 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
+                         $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].goods_real_price+"</td></tr>");
+                	 }
+	                  $("#orderStatus").text(orderStatusName[orderStatus]);//更改订单状态
+	                  if(orderStatus!=1){
+	                  	$("#account").text("￥"+orderPrice+"元");//更改订单金额
+	                  }else{
+	                  	$("#account").text("￥"+lowPrice+"~"+highPrice+"元");//更改订单金额
+	                  }
+	                  if(orderStatus==2){//确认订单详情页面
+	                  	//$('#confirm').attr("display","block");
+	                  	document.getElementById("confirm").style.display ="block";
+	                  }
+	                  if(orderStatus==4){//待收货订单详情页面。可以提交售后信息
+	                  	document.getElementById("afterSales").style.display ="block";
+	                  }
+                 }
              },
              error: function (er) {          //失败，回调函数
                  alert(er);
@@ -129,12 +125,14 @@
           contentType:'application/json;charset=UTF-8',
           success: function (data) {      //成功，回调函数
           	data =data.after_sale;
-            $("#reason").val(data[0].after_sale_reason);//更改售后原因
-         	$("#reason").attr("disabled",true);//更改售后原因不可编辑
-         	//data.prove_img.preview();
-         	$("#upload").html("");
-       		$("#dealWith").html("<strong><b>处理方式：</b><b>"+data.handle_way+"</b></strong>");//处理方式
-       		$("#afterSaleStatus").html("<strong><b>售后状态：</b><b>"+afterSaleStatusName[data.handle_status]+"</b></strong>");//售后状态
+          	if(data){
+          		$("#reason").val(data[0].after_sale_reason);//更改售后原因
+             	$("#reason").attr("disabled",true);//更改售后原因不可编辑
+             	//data.prove_img.preview();
+             	$("#upload").html("");
+           		$("#dealWith").html("<strong><b>处理方式：</b><b>"+data.handle_way+"</b></strong>");//处理方式
+           		$("#afterSaleStatus").html("<strong><b>售后状态：</b><b>"+afterSaleStatusName[data.handle_status]+"</b></strong>");//售后状态
+          	}
           },
           error: function (er) {          //失败，回调函数
               alert(er);
@@ -208,16 +206,17 @@
              success: function (data) {      //成功，回调函数
                  //alert(data.result);
                  data = data.list1;
-                 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
-                        $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].goods_real_price+"</td></tr>");
-                    }
-                    $("#orderStatus").text(orderStatusName[orderStatus]);//更改订单状态
-                    if(orderStatus!=1){
-                    	$("#account").text("￥"+orderPrice+"元");//更改订单金额
-                    }else{
-                    	$("#account").text("￥"+lowPrice+"~"+highPrice+"元");//更改订单金额
-                    }
-                    
+                 if(data){
+                	 for(var i=0;i<data.length;i++){//data.length是获取data的长度。for循环
+                         $("#order").append("<tr><td>"+data[i].goods_name+"</td><td>"+data[i].goods_low_price+"~"+data[i].goods_high_price+"</td><td>"+data[i].goods_amount+"</td><td>"+data[i].goods_real_price+"</td></tr>");
+                     }
+                     $("#orderStatus").text(orderStatusName[orderStatus]);//更改订单状态
+                     if(orderStatus!=1){
+                     	$("#account").text("￥"+orderPrice+"元");//更改订单金额
+                     }else{
+                     	$("#account").text("￥"+lowPrice+"~"+highPrice+"元");//更改订单金额
+                     }
+                 }
              },
              error: function (er) {          //失败，回调函数
                  alert(er);
