--- a/src/main/webapp/editPassword.html
+++ b/src/main/webapp/editPassword.html
@@ -24,6 +24,9 @@
 		window.history.go(-1); 
 	}
 	function updatePassword(){
+		if(!confirm("确认修改？")){
+			return;
+		}
 		var phone=$('#phone').val();
 		var oldPassword=$('#oldPassword').val();
 		var newPassword1=$('#newPassword1').val();
