--- a/src/main/webapp/myBasket.html
+++ b/src/main/webapp/myBasket.html
@@ -46,6 +46,9 @@
 		window.history.go(-1); // 返回上一页  
 	}
 	function createOrder(){//生成订单
+		if(!confirm("确认购买？")){
+			return;
+		}
 		var param = {};
 		var list =new Array();
 		$('#myBasket tr').not(':eq(0)').each(function(i){  
@@ -81,6 +84,9 @@
 	        });
 	}
 	function deleteGoods(goodsId){//删除一个购物项
+		if(!confirm("确认删除？")){
+			return;
+		}
 		var data ={"goods_id":goodsId};
 		$.ajax({
 	            url: "/fresh/buyCart/deleteItem.action",        //后台url
@@ -98,6 +104,9 @@
 	        });
 	}
 	function deleteAllGoods(){//清空购物车
+		if(!confirm("确认清空购物车？")){
+			return;
+		}
 		var data ={};
 		$.ajax({
 	            url: "/fresh/buyCart/clearBuyCart.action",        //后台url
