--- a/src/main/webapp/userOrderDetail.html
+++ b/src/main/webapp/userOrderDetail.html
@@ -67,34 +67,12 @@
          });
 	});
 	function confirmOrder(){//确认订单
-		message={
-				"status":3,//订单状态  待收货
-	            "id":orderId
-		};
-		$.ajax({//订单状态查找订单
-          url: "/fresh/order/updateStatus.action",        //后台url
-          data:JSON.stringify(message),
-          type: "POST",                   //类型，POST或者GET
-          dataType: 'json',              //数据返回类型，可以是xml、json等
-          contentType:'application/json;charset=UTF-8',
-          success: function (data) {      //成功，回调函数
-          	if(data.result==1){
-          		alert("修改成功");
-          		sessionStorage.setItem("orderStatus",3);
-          		window.location.href="./userOrderList.html";
-           	}
-          },
-          error: function (er) {          //失败，回调函数
-              alert(er);
-          }
-      });
-	}
-	function cancelOrder(){//取消订单
-		message={
-				"status":0,//订单状态  待收货
-	            "id":orderId
-		};
-		$.ajax({//订单状态查找订单
+		if(confirm("是否确认订单？")){
+			message={
+					"status":3,//订单状态  待收货
+		            "id":orderId
+			};
+			$.ajax({//订单状态查找订单
 	          url: "/fresh/order/updateStatus.action",        //后台url
 	          data:JSON.stringify(message),
 	          type: "POST",                   //类型，POST或者GET
@@ -103,7 +81,7 @@
 	          success: function (data) {      //成功，回调函数
 	          	if(data.result==1){
 	          		alert("修改成功");
-	          		sessionStorage.setItem("orderStatus",1);
+	          		sessionStorage.setItem("orderStatus",3);
 	          		window.location.href="./userOrderList.html";
 	           	}
 	          },
@@ -111,6 +89,32 @@
 	              alert(er);
 	          }
 	      });
+		}
+	}
+	function cancelOrder(){//取消订单
+		if(confirm("是否取消订单？")){
+			message={
+					"status":0,//订单状态  待收货
+		            "id":orderId
+			};
+			$.ajax({//订单状态查找订单
+		          url: "/fresh/order/updateStatus.action",        //后台url
+		          data:JSON.stringify(message),
+		          type: "POST",                   //类型，POST或者GET
+		          dataType: 'json',              //数据返回类型，可以是xml、json等
+		          contentType:'application/json;charset=UTF-8',
+		          success: function (data) {      //成功，回调函数
+		          	if(data.result==1){
+		          		alert("修改成功");
+		          		sessionStorage.setItem("orderStatus",1);
+		          		window.location.href="./userOrderList.html";
+		           	}
+		          },
+		          error: function (er) {          //失败，回调函数
+		              alert(er);
+		          }
+		      });
+		}
 	}
 	function findAfterSaleInfo(id){//查询售后信息
 		message={
@@ -250,60 +254,65 @@
 		      });
 	 }
 	 function confirmReceive(){//确认收货，更改订单状态为已完成
-		 message={
-					"status":6,//订单状态  已完成
-		            "id":orderId
-			};
-			$.ajax({//订单状态查找订单
-		          url: "/fresh/order/updateStatus.action",        //后台url
-		          data:JSON.stringify(message),
-		          type: "POST",                   //类型，POST或者GET
-		          dataType: 'json',              //数据返回类型，可以是xml、json等
-		          contentType:'application/json;charset=UTF-8',
-		          success: function (data) {      //成功，回调函数
-		          	if(data.result==1){
-		          		alert("修改成功");
-		          		window.location.href="./userOrderList.html";
-		           	}
-		          },
-		          error: function (er) {          //失败，回调函数
-		              alert(er);
-		          }
-		      });
+		 if(confirm("是否确认收货?")){
+			 message={
+						"status":6,//订单状态  已完成
+			            "id":orderId
+				};
+				$.ajax({//订单状态查找订单
+			          url: "/fresh/order/updateStatus.action",        //后台url
+			          data:JSON.stringify(message),
+			          type: "POST",                   //类型，POST或者GET
+			          dataType: 'json',              //数据返回类型，可以是xml、json等
+			          contentType:'application/json;charset=UTF-8',
+			          success: function (data) {      //成功，回调函数
+			          	if(data.result==1){
+			          		alert("修改成功");
+			          		window.location.href="./userOrderList.html";
+			           	}
+			          },
+			          error: function (er) {          //失败，回调函数
+			              alert(er);
+			          }
+			      });
+		 }
 	 }
 	 function updateAftersale(){//提交售后信息
-		 var reason = $('#reason').val();
-		 message={                          //数据
-	                "after_sale": {
-						"after_sale_id": "",
-						"user_id":user.id,
-						"a_order_id": orderId,
-						"after_sale_reason": reason,
-						"handle_status": 1,
-						"handle_way": "",
-						"handle_person": "",
-						"handle_time": "",
-						"prove_img": ""
-					}
-	             },
-			 $.ajax({//添加售后
-		             url: "/fresh/after_sale/addAfter_sale.action",        //后台url
-		             data:JSON.stringify(message),
-		             type: "POST",                   //类型，POST或者GET
-		             dataType: 'json',              //数据返回类型，可以是xml、json等
-		             contentType:'application/json;charset=UTF-8',
-		             success: function (data) {      //成功，回调函数
-		             	if(data.result==1){
-		             		alert("添加成功");
-		             		window.location.href="./userOrderList.html";
-		             	}
+		 if(!confirm("确认提交售后信息?")){
+			 return;
+		 }
+			 var reason = $('#reason').val();
+			 message={                          //数据
+		                "after_sale": {
+							"after_sale_id": "",
+							"user_id":user.id,
+							"a_order_id": orderId,
+							"after_sale_reason": reason,
+							"handle_status": 1,
+							"handle_way": "",
+							"handle_person": "",
+							"handle_time": "",
+							"prove_img": ""
+						}
 		             },
-		             error: function (er) {          //失败，回调函数
-		                 alert(er);
-		                 //previewer.preview();
-		             }
-		         });
-	 }
+				 $.ajax({//添加售后
+			             url: "/fresh/after_sale/addAfter_sale.action",        //后台url
+			             data:JSON.stringify(message),
+			             type: "POST",                   //类型，POST或者GET
+			             dataType: 'json',              //数据返回类型，可以是xml、json等
+			             contentType:'application/json;charset=UTF-8',
+			             success: function (data) {      //成功，回调函数
+			             	if(data.result==1){
+			             		alert("添加成功");
+			             		window.location.href="./userOrderList.html";
+			             	}
+			             },
+			             error: function (er) {          //失败，回调函数
+			                 alert(er);
+			                 //previewer.preview();
+			             }
+			         });
+		 }
 </script>
 </head>
 <body>
