add back and exit

--- a/src/main/webapp/editAddress.html
+++ b/src/main/webapp/editAddress.html
@@ -9,9 +9,11 @@
 <link rel="stylesheet" href="css/pintuer.css">
 <link rel="stylesheet" href="css/admin.css">
 <link rel="stylesheet" href="orderSubmit.css">
-<script src="js/jquery.js"></script>
-<script src="js/pintuer.js"></script>
-<script src="js/JquerySession.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/pintuer.js"></script>
+<script type="text/javascript" src="js/JquerySession.js"></script>
+<script type="text/javascript" src="js/json.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
 <script type="text/javascript">
 	var addressId=sessionStorage.getItem('addressId');//全局变量
 	var obj = sessionStorage.getItem('user');//{"userName":"Mr wang","userType":1}
