--- a/src/main/webapp/editGoods.html
+++ b/src/main/webapp/editGoods.html
@@ -8,10 +8,11 @@
 <title></title>
 <link rel="stylesheet" href="css/pintuer.css">
 <link rel="stylesheet" href="css/admin.css">
-<script src="js/jquery.js"></script>
-<script src="js/pintuer.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/pintuer.js"></script>
 <script type="text/javascript" src="js/JquerySession.js"></script>
-<script type="text/javascript" src="./js/json.js"></script>
+<script type="text/javascript" src="js/json.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
 <script>
 	var goodsId = sessionStorage.getItem('goodsId');
 	var message;//请求参数
