--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -14,8 +14,12 @@
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/JquerySession.js"></script>
 <script type="text/javascript" src="js/include.js"></script>
-<script type="text/javascript" src="./js/json.js"></script>
-<script type="text/javascript">
+<script type="text/javascript" src="js/json.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
+<script>
+	$(document).ready(function(c) {
+		
+	});
 	<!-- 用户对象 -->
 	//获取登录用户信息
 	var user = sessionStorage.getItem('user');//
