--- a/src/main/webapp/userAfterSaleDetail.html
+++ b/src/main/webapp/userAfterSaleDetail.html
@@ -8,13 +8,13 @@
 <title></title>
 <link rel="stylesheet" href="css/pintuer.css">
 <link rel="stylesheet" href="css/admin.css">
-<script src="js/jquery.js"></script>
-<script src="js/jquery.min.js"></script>
-<script src="js/pintuer.js"></script>
-<script src="js/include.js"></script>
-<script src="js/uploadImg.js"></script>
-<script src="js/JquerySession.js"></script>
-<script type="text/javascript" src="./js/json.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/pintuer.js"></script>
+<scripttype="text/javascript"  src="js/include.js"></script>
+<script type="text/javascript" src="js/uploadImg.js"></script>
+<script type="text/javascript" src="js/JquerySession.js"></script>
+<script type="text/javascript" src="js/json.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
 <script>
 var orderStatus = sessionStorage.getItem('orderStatus');
 var orderId = sessionStorage.getItem("orderId");
