--- a/src/main/webapp/editRecommendDishes.html
+++ b/src/main/webapp/editRecommendDishes.html
@@ -10,6 +10,7 @@
 <link rel="stylesheet" href="css/admin.css">
 <script src="js/jquery.js"></script>
 <script src="js/pintuer.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
 <script>
 var message;//请求参数
 	$(document).ready(function(c) {
