--- a/src/main/webapp/pendingQuateOrderDetail.html
+++ b/src/main/webapp/pendingQuateOrderDetail.html
@@ -8,10 +8,11 @@
 <title></title>
 <link rel="stylesheet" href="css/pintuer.css">
 <link rel="stylesheet" href="css/admin.css">
-<script src="js/jquery.js"></script>
-<script src="js/pintuer.js"></script>
-<script src="js/json.js" type="text/javascript"></script>
-<script src="js/JquerySession.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/pintuer.js"></script>
+<script type="text/javascript" src="js/json.js"></script>
+<script type="text/javascript" src="js/JquerySession.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
 <script>
 var orderId =sessionStorage.getItem("orderId");
 var pages = 0;
