--- a/src/main/webapp/register.html
+++ b/src/main/webapp/register.html
@@ -10,9 +10,10 @@
 <script type="text/script">
 	
 </script>
-<script src="./js/jquery.min.js"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/JquerySession.js"></script>
 <script type="text/javascript" src="js/json.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
 <script>
 	$(document).ready(function(c) {
 		//初始化方法
