--- a/src/main/webapp/user.html
+++ b/src/main/webapp/user.html
@@ -8,9 +8,10 @@
 <title></title>
 <link rel="stylesheet" href="css/pintuer.css">
 <link rel="stylesheet" href="css/admin.css">
-<script src="js/jquery.js"></script>
-<script src="js/pintuer.js"></script>
-<script src="js/jquery.cookie.js" type="text/javascript"></script>
+<script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/pintuer.js"></script>
+<script type="text/javascript" src="js/jquery.cookie.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
 <script>
 var obj = sessionStorage.getItem("user");
 var user = JSON.parse(obj);	
