--- a/src/main/webapp/vegetableCenter.html
+++ b/src/main/webapp/vegetableCenter.html
@@ -10,11 +10,10 @@
 <link rel="stylesheet" href="css/pintuer.css">
 <link rel="stylesheet" href="css/admin.css">
 <!-- -->
-<script src="js/jquery.min.js"></script>
 <script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/jquery.cookie.js"></script>
 <script type="text/javascript" src="js/JquerySession.js"></script>
-<script type="text/javascript" src="./js/json.js"></script>
+<script type="text/javascript" src="js/json.js"></script>
+<script type="text/javascript" src="js/back.js"></script>
 <script type="text/javascript">
 
 	var obj = sessionStorage.getItem('user');//{"userName":"Mr wang","userType":1}
