solve the blank problem at the bottom of the page

--- a/src/main/webapp/index.html
+++ b/src/main/webapp/index.html
@@ -2,7 +2,7 @@
 <html>
 <head>
 <title>首页</title>
-<link href="index.css" rel="stylesheet" type="text/css" media="all" />
+<!-- <link href="index.css" rel="stylesheet" type="text/css" media="all" /> -->
 <link href="css/pintuer.css" rel="stylesheet" type="text/css" media="all" />
 <link href="css/admin.css" rel="stylesheet" type="text/css" media="all" />
 
