--- a/src/main/webapp/login.html
+++ b/src/main/webapp/login.html
@@ -5,7 +5,6 @@
 <link href="login.css" rel="stylesheet" type="text/css" media="all" />
 <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
 <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-<meta http-equiv="Content-Type" content="text/html; charset=utf-8" /> 
 <!-- -->
 <script type="text/script">
 	
@@ -126,58 +125,35 @@
 <body>
 <!-- contact-form -->	
 <div class="message warning" id="login">
-<div class="inset" >
-	<div class="login-head">
-		<h1>用户登录</h1>
-	</div>
-	<form>
-		<li>
-			<input type="text" class="text" value="请输入账号" id="userLoginAccount" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}"><a href="#" class=" icon user"></a>
-		</li>
-			<div class="clear"> </div>
-		<li>
-			<input type="password" autocomplete="new-password" value="请输入密码" id="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}"> <a href="#" class="icon lock"></a>
-		</li>
-		<li>
-			<div id="showMsg"></div>
-		</li>
-		<div class="clear"> </div>
-		<div class="submit">
-			<input  type="button"  onclick="login()" value="登录" dir="rtl"/>
-				<!-- <h4><a onclick="javascript:openPage()">忘记密码</a></h4> -->
-				<h4><a href="register.html">注册成为新用户</a></h4>
-						  <div class="clear">  </div>	
-			 </div>
-			
-	</form>
-	</div>					
-</div>
-<div class="message warning" id="forgetPassword" style="display:none;">
-<div class="inset">
-	<div class="login-head" >
-		<h1>忘记密码</h1>
-		 <!-- <div class="alert-close"> </div> --> 			
-	</div>
+	<div class="inset" >
+		<div class="login-head">
+			<h1>用户登录</h1>
+		</div>
 		<form>
 			<li>
-				<input type="text" class="text" value="请输入账号" id="userAccount" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}"><a href="#" class=" icon user"></a>
+				<input type="text" class="text" value="请输入账号" id="userLoginAccount" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Username';}"><a href="#" class=" icon user"></a>
 			</li>
 				<div class="clear"> </div>
 			<li>
-				<input type="password" autocomplete="new-password"  value="请输入验证码" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}"> <a href="#" class="icon lock"></a>
+				<input type="password" autocomplete="new-password" value="请输入密码" id="password" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}"> <a href="#" class="icon lock"></a>
 			</li>
 			<div class="clear"> </div>
 			<div class="submit">
-				<input  type="button" onclick="getMyPassword()" value="找回" dir="rtl">
+				<input  type="button"  onclick="login()" value="登录" dir="rtl"/>
+					<!-- <h4><a onclick="javascript:openPage()">忘记密码</a></h4> -->
 					<h4><a href="register.html">注册成为新用户</a></h4>
-							  <div class="clear">  </div>	
-				</input>
- 			 </div>
-				
+			</div>
 		</form>
+	</div>	
 </div>
-	<div class="clear"> </div>
-</div>
+<li style='visibility: hidden'>
+	<input type="password" autocomplete="new-password" value="请输入密码" id="password1" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}"> <a href="#" class="icon lock"></a>
+</li>
+<div class="clear"> </div>
+<li style='visibility: hidden'>
+	<input type="password" autocomplete="new-password" value="请输入密码" id="password2" onfocus="this.value = '';" onblur="if (this.value == '') {this.value = 'Password';}"> <a href="#" class="icon lock"></a>
+</li>
+<div class="clear"> </div>
 <!--- footer --->
 </body>
 </html>
